Fix the css broken issue on mobile for each docs.

--- a/src/components/documents/Documents.scss
+++ b/src/components/documents/Documents.scss
@@ -13,10 +13,10 @@
   }
 
   &-container {
-    width: 960px;
+    max-width: 960px;
 
     & h3 {
-      margin-bottom: 24px;
+      margin: 0 16px 24px 16px;
     }
 
     & h4 {
